[tool.poetry]
name = "textmap"
version = "0.0.0"
description = "Heatmap-like visualizations for text-based content"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1.24.2"
python = "^3.11"
spacy = "^3.5.1"
flask = "^2.2.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
