[tool.poetry]
name = "textmap"
version = "0.0.0"
description = "Heatmap-like visualizations for text-based content"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
flask = "^2.2.3"
gunicorn = "^20.1.0"
numpy = "^1.24.2"
python = "^3.10"
spacy = "^3.5.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
toml = "^0.10.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
